--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,17 +1,18 @@
 FROM node:16-alpine
 
-ENV ROOT /usr/src/app
-WORKDIR ${ROOT}
+# Working directory be app
+WORKDIR /usr/app
 
 COPY package*.json ./
 
+# Install dependencies
 RUN npm install
+RUN mkdir -p node_modules/.cache && chmod -R 777 node_modules/.cache
 
+
+# copy local files to app folder
 COPY . .
 
-ENV NODE_ENV development
-
-ENTRYPOINT ["npm"]
-CMD ["start"]
-
 EXPOSE 3000
+
+CMD ["npm","start"]
