--- a/local-dev/docker-compose.yml
+++ b/local-dev/docker-compose.yml
@@ -1,36 +1,59 @@
-version: '3.4'
+version: '3.9'
 
-services: 
-  client:
+services:
+  server:
     build:
-      context: '../client'
-    ports: 
-      - '3000:3000'
-    volumes: 
-      - '../client:/home/node/app:delegated'
-    command: 'run start'
-    container_name: 'client'
-
-  mongo: 
-    image: mongo:5.0.2
-    ports: 
-      - '27017:27017'
-    environment: 
+      context: ../server
+      dockerfile: Dockerfile
+    image: partify-server
+    container_name: partify-server
+    command: npm run dev
+    volumes:
+      - ../server/:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mongo
+    env_file: ../server/src/.env
+    environment:
+      - NODE_ENV=development
+    networks:
+      - app-network
+  mongo:
+    image: mongo:latest
+    environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
-    container_name: 'mongo'
-
-  server:
-    depends_on: 
-      - mongo
+    volumes:
+      - data-volume:/data/db
+    ports:
+      - "27017:27017"
+    networks:
+      - app-network
+  client:
     build:
-      context: '../server'
-    ports: 
-      - '8081:3000'
-      - '9000:9000'
-    environment: 
-      MONGODB_URI: mongodb://root:root@mongo/Partify?authSource=admin
-    volumes: 
-      - '../server:/home/node/app:delegated'
-    command: 'run dev'
-    container_name: 'server'
+      context: ../client
+      dockerfile: Dockerfile
+    image: partify-client
+    container_name: partify-client
+    command: npm run start
+    volumes:
+      - ../client/:/usr/app
+      - /usr/app/node_modules
+    depends_on:
+      - server
+    ports:
+      - "3000:3000"
+    networks:
+      - app-network
+
+networks:
+    app-network:
+        driver: bridge
+
+volumes:
+    data-volume:
+    node_modules:
+    web-root:
+      driver: local
