--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,20 @@
 FROM node:16-alpine
 
-ENV ROOT /usr/src/app
-WORKDIR ${ROOT}
+ARG NODE_ENV=development
 
+# Create App Directory
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
+
+# Install Dependencies
 COPY package*.json ./
 
 RUN npm install
 
+# Copy app source code
 COPY . .
 
-ENV NODE_ENV development
+# Exports
+EXPOSE 8080
 
-ENTRYPOINT ["npm"]
-CMD ["start"]
-
-EXPOSE 3000
-
+CMD ["npm","start"]
