--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon --inspect=0.0.0.0:9000 -L src/server.js",
-    "test" : "mocha src/test/ --recursive --exit"
+    "test": "mocha src/test/ --recursive --exit"
   },
   "author": "Karl Janar Kinkar & Torm Erik Raudvee",
   "license": "MIT",
@@ -14,12 +14,13 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "mongoose": "^6.0.12",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.3"
   }
 }
