--- a/server/src/.env.example
+++ b/server/src/.env.example
@@ -1,5 +1,5 @@
-JWT_SECRET=
-MONGO_USERNAME=
-MONGO_PASSWORD=
+JWT_SECRET=joller
+MONGO_USERNAME=root
+MONGO_PASSWORD=root
 MONGO_DB=partify
 PORT = 8080
