--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "date-and-time": "^2.0.1",
     "dotenv": "^10.0.0",
